# cloud-tester-hs

./: .gitignore  README.md  cloud-tester.cabal  stack.yaml
app/: Main.hs
notes/: docker-machine-create-output
resources/: design.sketch
src/: Bootstrap.hs  DockerApi.hs  DockerMachine.hs  Environment.hs  Log.hs  SafeProcess.hs  Types.hs
src/API/: Environment.hs
src/CloudTester/: SeleniumDocker.hs
src/DockerAPI/: Types.hs
src/DockerMachine/: Parser.hs  Types.hs
