name:                cloud-tester
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/githubuser/cloud-tester#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author Here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     DockerMachine
                     , DockerMachine.Types
                     , DockerMachine.Parser 
                     , DockerApi
                     , DockerApi.Types
                     , API.Environment
                     , Environment
                     , Bootstrap
                     , Types
                     , Log

  other-modules:       SafeProcess

  build-depends:       base >= 4.7 && < 5
                     -- Parser generator
                     , parsec              
                     , process
                     , bytestring
                     , lens
                     -- Monad transformers
                     , transformers        
                     , mtl
                     -- HTTP Client library
                     , wreq                
                     , HsOpenSSL                
                     , http-client-openssl
                     -- HTTP Server library
                     , servant                
                     , servant-server
                     , servant-docs
                     -- JSON library
                     , aeson               
                     , lens-aeson               
                     -- Performant String implementation
                     , text                
                     , semigroups
  default-language:    Haskell2010

executable cloud-tester-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , cloud-tester
                     , transformers
                     -- HTTP Server library
                     , wai                
                     , warp                
                     , servant                
                     , servant-server
                     , servant-docs
  default-language:    Haskell2010

test-suite cloud-tester-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , cloud-tester
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/cloud-tester
